# asimov-face_detection_code

./: CMakeLists.txt  LICENSE  README.md  package.xml  readme.txt
Documentation/: Link to index.html
Documentation/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  face__detect_8cpp.html  face__detect_8cpp__incl.map  face__detect_8cpp_source.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  image__publish_8cpp.html  image__publish_8cpp__incl.map  image__publish_8cpp_source.html  imgsubcriber_8cpp.html  imgsubcriber_8cpp__incl.map  imgsubcriber_8cpp__incl.md5  imgsubcriber_8cpp_source.html  index.hhc  index.hhk  index.hhp  index.html  webcam__video__show_8cpp.html  webcam__video__show_8cpp__incl.map  webcam__video__show_8cpp_source.html
Documentation/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.eps  face__detect_8cpp.tex  face__detect_8cpp__incl.eps  face__detect_8cpp__incl.md5  files.tex  image__publish_8cpp.tex  image__publish_8cpp__incl.eps  image__publish_8cpp__incl.md5  imgsubcriber_8cpp.tex  imgsubcriber_8cpp__incl.eps  imgsubcriber_8cpp__incl.md5  refman.tex  webcam__video__show_8cpp.tex  webcam__video__show_8cpp__incl.eps  webcam__video__show_8cpp__incl.md5
Documentation/rtf/: refman.rtf  (+4 more)
launch/: face_detection _video.launch  face_detection _video.launch~  face_detection.launch  face_detection.launch~  face_detection_video.launch  face_detection_video.launch~
src/: face_detect.cpp  face_detect.cpp~  image_publish.cpp  imgsubcriber.cpp  webcam_video_show.cpp
(+13 files in other folders)
